--- a/src/app/parent/parent.component.html
+++ b/src/app/parent/parent.component.html
@@ -1,1 +1,8 @@
-<p>parent works!</p>
+<div class="container_parent">
+    <h1>Parent component</h1>
+    <ul>
+        <li *ngFor="let fruit of fruitList">
+            {{fruit.name}}
+        </li>
+    </ul>
+</div>
